# Wedding-AI

./: .env.example  .pre-commit-config.yaml  ARCH_REVIEW_AND_IMPROVE.md  LICENSE  README.md  docker-compose.yml  prometheus.yml
.githooks/: pre-commit
ai_service/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
ai_service/app/: cache.py  config.py  index_manager.py  main.py  retrieval.py  schemas.py
ai_service/app/services/: __init__.py  context.py  qa.py  summarization.py
ai_service/data/chroma/: chroma.sqlite3
ai_service/tests/: __init__.py  conftest.py  test_ask.py  test_ask_docs.py  test_ask_stream.py  test_cache.py  test_context.py  test_health.py  test_index_manager.py  test_qa.py  test_retrieval.py  test_retrieval_helpers.py  test_summarization.py
backend/: .dockerignore  .env.example  .gitignore  .rubocop.yml  Dockerfile  Gemfile  README.md
backend/app/models/: guest.rb  guestbook_entry.rb  task.rb  wedding.rb
backend/app/services/: ai_agent_client.rb  ask_context_builder.rb  circuit_breaker.rb  question_router.rb
backend/config/: application.rb  database.yml  puma.rb  routes.rb
backend/config/environments/: development.rb  production.rb  (+1 more)
backend/db/: seeds.rb
backend/spec/: examples.txt  rails_helper.rb  spec_helper.rb
docs/: README.md  ai-qa.md  dashboard.md  guestbook.md  guests.md  tasks.md
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/docker/: default.conf.template  entrypoint.sh  nginx.conf
frontend/src/: App.jsx  index.css  main.jsx
(+67 files in other folders)
